package ch1_Iterator;

public interface Aggregate {
    Iterator iterator();
}
