package ch1_Iterator;

public interface Iterator {
    boolean hasNext();

    Object next();
}
